Remove unused Textfield::SetShadows.

BUG=624175

Review-Url: https://codereview.chromium.org/2612793006
Cr-Commit-Position: refs/heads/master@{#441706}

Former-commit-id: 21dd7bac85ae75e2887c61696f4485c4e5c3739d